--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <!-- <header>
+    <header>
         <div class="triangle left">
             <h1>YEEE BOiii</h1>
         </div>
@@ -25,7 +25,7 @@
             <span class="text">UNLOCK</span>
             <span class="progress">&nbsp;</span> 
         </button>
-    </header> -->
+    </header>
     <div class="container">
 
         <ul id="scene">
