--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                     <li class="item btn mobile-hide">UY niggaaa</li>
                     <li class="item cybr">
                         <button class="cybr-btn">
-                            About_me<span aria-hidden>_</span>
-                            <span aria-hidden class="cybr-btn__glitch">About_me</span>
-                            <span aria-hidden class="cybr-btn__tag">J175</span>
+                            Happy_BIRTHDAYYY<span aria-hidden>_</span>
+                            <span aria-hidden class="cybr-btn__glitch">Happy_BIRTHDAYYY</span>
+                            <span aria-hidden class="cybr-btn__tag">Happy_BIRTHDAYYY</span>
                         </button>
                     </li>
                 </ul>
@@ -68,20 +68,20 @@
                             <img class="bus-img" src="./img/bus.svg" height="100%">
                             <ul>
                                 <li>
-                                    <a href="https://github.com/Jervi-sir" target="_blanc">
+                                    <a href="https://www.youtube.com/watch?v=RLWWPKp5yyg" target="_blanc">
                                         <img class="github" src="https://cdn.blerp.com/thumbnails/cb1e89d0-b864-11ed-a890-033e18deda3d" alt="">
                                     </a>
                                 </li>
 
                                 <li>
-                                    <a href="https://www.instagram.com/gacem_humen/" target="_blanc">
+                                    <a href="https://www.youtube.com/watch?v=n4ZYyAp3lBA" target="_blanc">
                                         <img class="instagram" src="https://i.ytimg.com/vi/CrB907Gxpkc/hq2.jpg?sqp=-oaymwEoCOADEOgC8quKqQMcGADwAQH4AY4DgAKQA4oCDAgAEAEYDyBlKE0wDw==&rs=AOn4CLDbzR_VkCluVxYBLNsrDhoAvANKlg" alt="">
                                     </a>
 
                                 </li>
 
                                 <li>
-                                    <a href="https://www.youtube.com/channel/UCD-YOxxLv5yGhcerkZLGZgg" target="_blanc">
+                                    <a href="https://www.youtube.com/watch?v=hvL1339luv0" target="_blanc">
                                         <img class="youtube" src="https://media.tenor.com/336YSmStQAMAAAAM/thumbs-up-cat-meme.gif" alt="">
                                     </a>
                                 </li>
@@ -118,17 +118,12 @@
 
             <div class="footer">
                 <div class="left">
-                    <h6>me and ma hommy are CEO of </h6>
-                    <img src="./img/2KW.png" alt="">
+                    <h6>ma hommy are CEO of </h6>
                 </div>
                 <div class="contact-me">
                     <button id="myBtn">إفتحني</button>
                 </div>
                 <div class="right">
-                    <h6>oh btw, </h6>
-                    <h6>this site isnt a joke </h6>
-                    <h6>but just a quick thing </h6>
-                    <h6>so i can put it online u know</h6>
                 </div>
             </div>
         </div>
