--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>Jervi</title>
+    <title>HAPPY bIRtHdAY</title>
     <link rel="icon" href="/img/head.png">
     <link rel="stylesheet" href="./css/main2.css">
     <link rel="stylesheet" href="./css/mobile.css">
